fix(contracts-support-section): overflow radius

--- a/src/3_blocks/contracts-support-section/style.scss
+++ b/src/3_blocks/contracts-support-section/style.scss
@@ -311,6 +311,7 @@
   border-radius: var(--border-radius-small);
   cursor: pointer;
   user-select: none;
+  overflow: hidden;
 
   &--active h3,
   &--active
